# using-yolov5-in-ncnn

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/savhascelik/exampleyolov5withncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5s.param
app/src/main/java/com/savhascelik/exampleyolov5withncnn/: MainActivity.java  NCNNDetector.java  Overlay.java  SettingsActivity.java  YoloV5Ncnn.java
app/src/main/jni/: CMakeLists.txt  NCNN_detector_public_jni.cpp  yolov5ncnn_jni.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/savhascelik/exampleyolov5withncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
